// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HtmlHead has all the meta datas 1`] = `
<head>
  <meta
    charset="utf-8"
  />
  <meta
    content="width=device-width, initial-scale=1.0, maximum-scale=5"
    name="viewport"
  />
  <meta
    content="Walcron Coorperation"
    name="og:title"
  />
  <meta
    content="profile"
    name="og:type"
  />
  <meta
    content="https://www.walcron.com/"
    name="og:site_name"
  />
  <meta
    content="image/png"
    property="og:image:type"
  />
  <meta
    content="400"
    property="og:image:width"
  />
  <meta
    content="400"
    property="og:image:height"
  />
  <meta
    content="https://www.walcron.com/og_image.png"
    name="og:image"
  />
  <meta
    content="Welcome to Walcron Coorperation, Malaysia and Singapore; a site was built for IT research purposes."
    name="og:description"
  />
  <meta
    content="walcoorperation@gmail.com"
    name="fb:admins"
  />
  <meta
    content="my description"
    name="description"
  />
  <title>
    Walcron
  </title>
  <link
    href="/manifest.json"
    rel="manifest"
  />
  <link
    href="/pwa/apple-icon.png"
    rel="apple-touch-icon"
  />
  <link
    href="/pwa/apple-icon-152x152.png"
    rel="apple-touch-icon"
    sizes="152x152"
  />
  <link
    href="/pwa/apple-icon-180x180.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="/favicon.ico"
    rel="shortcut icon"
    type="image/x-icon"
  />
  <script
    defer=""
    src="https://www.googletagmanager.com/gtag/js?id=G-9V9VC8N5XT"
  />
  <script
    defer=""
    id="google-analytics"
  />
  <script
    defer=""
    id="reroute-https"
  />
</head>
`;

exports[`HtmlHead has all the meta datas except viewport 1`] = `
<head>
  <meta
    charset="utf-8"
  />
  <meta
    content="Walcron Coorperation"
    name="og:title"
  />
  <meta
    content="profile"
    name="og:type"
  />
  <meta
    content="https://www.walcron.com/"
    name="og:site_name"
  />
  <meta
    content="image/png"
    property="og:image:type"
  />
  <meta
    content="400"
    property="og:image:width"
  />
  <meta
    content="400"
    property="og:image:height"
  />
  <meta
    content="https://www.walcron.com/og_image.png"
    name="og:image"
  />
  <meta
    content="Welcome to Walcron Coorperation, Malaysia and Singapore; a site was built for IT research purposes."
    name="og:description"
  />
  <meta
    content="walcoorperation@gmail.com"
    name="fb:admins"
  />
  <meta
    content="my description"
    name="description"
  />
  <title>
    Walcron
  </title>
  <link
    href="/manifest.json"
    rel="manifest"
  />
  <link
    href="/pwa/apple-icon.png"
    rel="apple-touch-icon"
  />
  <link
    href="/pwa/apple-icon-152x152.png"
    rel="apple-touch-icon"
    sizes="152x152"
  />
  <link
    href="/pwa/apple-icon-180x180.png"
    rel="apple-touch-icon"
    sizes="180x180"
  />
  <link
    href="/favicon.ico"
    rel="shortcut icon"
    type="image/x-icon"
  />
  <script
    defer=""
    src="https://www.googletagmanager.com/gtag/js?id=G-9V9VC8N5XT"
  />
  <script
    defer=""
    id="google-analytics"
  />
  <script
    defer=""
    id="reroute-https"
  />
</head>
`;
